--- a/Project_3_Pixel_Art_Maker/index.html
+++ b/Project_3_Pixel_Art_Maker/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Pixel Art Maker!</title>
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Sarina" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
 
@@ -22,9 +22,9 @@
           <div id="size">
             <h2>Choose Your Grid Size</h2>
             <label>Grid Height:</label>
-            <input type="number" id="input_height" name="height" min="1" value="1"> <label>Grid Width:</label>
-            <input type="number" id="input_width" name="width" min="1" value="1">
-            <button type="submit">Submit</button>
+            <input type="number" id="inputHeight" name="height" min="1" value="1"> <label>Grid Width:</label>
+            <input type="number" id="inputWidth" name="width" min="1" value="1">
+            <input type="submit"></button>
           </div>
         </form>
       </div>
@@ -37,7 +37,7 @@
 
       <div id="canvasContainer">
         <h2 id="canvasTitle">Design Canvas</h2>
-        <table id="pixel_canvas">
+        <table id="pixelCanvas">
 
         </table>
       </div>
