--- a/Project_3_Pixel_Art_Maker/index.html
+++ b/Project_3_Pixel_Art_Maker/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Pixel Art Maker!</title>
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Sarina" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
 
